--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "hnswlib-node": "^1.4.2",
     "jsonwebtoken": "^9.0.0",
     "langchain": "^0.0.95",
-    "openai": "^3.2.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^3.2.1",
+    "react-mic": "^12.4.6",
+    "uuid": "^9.0.0"
   }
 }
