--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "jsonwebtoken": "^9.0.0",
     "langchain": "^0.0.95",
     "multer": "^1.4.5-lts.1",
-    "openai": "^3.2.1",
-    "react-mic": "^12.4.6",
-    "uuid": "^9.0.0"
+    "openai": "^3.3.0",
+    "react-mic": "^12.4.6"
   }
 }
